--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
   "timeZone": "Asia/Dhaka",
-  "prefix": "!",
+  "prefix": ",",
   "language": "en",
   "api": "http://65.109.80.126:20409/aryan",
   "baby": "https://nix-baby-apis.vercel.app",
-  "nickNameBot": "Goat-Bot-V2",
+  "nickNameBot": "❟❛❟𝗛𝗶✨𝗠𝗶❟❛❟",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
@@ -47,13 +47,13 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100001611578438"
+    "61580068018277"
   ],
   "developer": [
-    "100001611578438"
+    "61580068018277"
   ],
   "vipuser": [
-    "100001611578438"
+    "61580068018277"
   ], 
   "whiteListMode": {
     "enable": false,
